--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">Project_AK7MT_v2</string>
-    <string name="aud_1_00">AUD: 1.00</string>
-    <string name="base_currency">AUD: 1.00</string>
+    <string name="czk_1_000">CZK: 1.000</string>
+    <string name="base_currency">CZK: 1.000</string>
     <string name="czk">CZK:</string>
     <string name="eur">EUR:</string>
     <string name="usd">USD:</string>
+    <string name="gbp">GBP:</string>
 </resources>
